[package]
name = "getvideo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
biliup = "0.1.11"
bytes = "1.1.0"
curl = "0.4.46"
futures = "0.3.17"
indicatif = "0.17.0-rc"
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
zeroize = "1.4.3"
thiserror = "1.0"
cookie = "0.15.1"
rand = "0.8.5"
crab-dlna = "0.2.1"
warp = "0.3.7"
log = "0.4.22"
xml = "0.8.20"
slugify = "0.1.0"
dialoguer = "0.11.0"
