[package]
name = "getvideo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
dialoguer = "0.11.0"
rusqlite = "0.32.0"
log = "0.4.22"
crab-dlna = "0.2.1"
xml = "0.8.20"
url = "2.5.2"
reqwest = { version = "0.11", features = ["blocking"] }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
env_logger = "0.11.5"
libsqlite3-sys = "0.30.1"
anyhow = "1.0.86"
indicatif = "0.17.8"
